[package]
name = "bacalhau"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow = { version = "50", features = ["prettyprint"] }
arrow-json = "50"
arrow_msg = { path = "../../../arrow_msg" }
section = { version = "0.3", path = "../../../section/" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11.22", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.14"
tokio-util = "0.7.10"
handlebars = "4.4"
serde_yaml = "0.9"


[dev-dependencies]
stub = { path = "../../section_impls/stub/" }
